# tmwd-cdp-bridge

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  development.md  troubleshooting.md  visual-intro.md
docs/iterations/: debug-page-badge.md  doctor-recovery.md
docs/releases/: v0.1.3.md
extension/: background.js  config.js  content.js  manifest.json  popup.html  popup.js
scripts/: e2e_browser_inspect_url.mjs  e2e_chrome_smoke.mjs  install.ps1  install.sh  skill_minimal_flow.mjs  smoke_no_extension.mjs  smoke_real_browser.mjs  soak_bridge.mjs  validate_skill.py
skills/tmwd-cdp-bridge/: SKILL.md
skills/tmwd-cdp-bridge/agents/: openai.yaml
skills/tmwd-cdp-bridge/references/: install.md  recovery.md  rpc.md
src/: auth.rs  cli.rs  config.rs  doctor.rs  install.rs  lib.rs  protocol.rs  self_update.rs  server.rs  session.rs
tests/: bridge_integration.rs
